tests/compile-fail/reserved/try_match_partial.stderr
error: no rules expected the token `,`
 --> tests/compile-fail/reserved/try_match_partial.rs:4:35
  |
4 |     let _ = try_match::try_match!(, Some(_0))(Some(42));
  |                                   ^ no rules expected this token in macro call
